dev: change default port

--- a/front/angular.json
+++ b/front/angular.json
@@ -78,7 +78,10 @@
               "browserTarget": "front:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4202
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
