--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
     "serve-index": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12",
+    "typescript": "^4.4.3"
   }
 }
