--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,9 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
+    "@types/node": "^16.9.6",
     "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
 }
