--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,9 @@
   "main": "server.ts",
   "scripts": {
     "start": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:prod": "node build/back/server.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
