--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "outDir": "build"
+  },
+  "files": ["server.ts"]
 }
